fixed responsiveNavigation overflowY

--- a/src/Style/ResponsiveNavigation.css
+++ b/src/Style/ResponsiveNavigation.css
@@ -1,4 +1,6 @@
 .ResponsiveNavigationRoot {
+  z-index: 2;
+  position: fixed;
   display: flex;
   flex-direction: row;
   width: 100vw;
